<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fando.picodiploma.moviecatalogue_4.activity.MainActivity">

    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Notification"
        android:title="@string/notification_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />



</menu>