<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.fando.picodiploma.moviecatalogue_4.fragment.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.fando.picodiploma.moviecatalogue_4.fragment.TVShowFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.fando.picodiploma.moviecatalogue_4.fragment.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />
</navigation>