<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_bg_tvs"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bg_backdrop"
            android:contentDescription="@string/ini_backdrop"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster_path_tvs"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/bg_poster"
            android:contentDescription="@string/ini_poster"
            android:scaleType="fitXY"
            app:elevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_detail"
            android:textColor="@color/textColorTitle"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster_path_tvs"
            app:layout_constraintTop_toBottomOf="@+id/img_bg_tvs" />

        <TextView
            android:id="@+id/tv_detail_title_tvs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/textColorTitleWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_path_tvs"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/release_date_detail"
            android:textColor="@color/textColorTitle"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster_path_tvs"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_tvs" />

        <TextView
            android:id="@+id/tv_release_date_detail_tvs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/textColorTitleWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_path_tvs"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/img_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ini_icon_rating"
            android:src="@drawable/ic_star_yellow_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_path_tvs" />

        <ImageView
            android:id="@+id/img_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/ini_icon_language"
            android:src="@drawable/ic_language_blue_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_detail_tvs"
            app:layout_constraintTop_toTopOf="@+id/img_rating" />

        <TextView
            android:id="@+id/tv_rating_detail_tvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_0_0"
            android:textColor="@color/textColorTitleWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_rating"
            app:layout_constraintStart_toEndOf="@+id/img_rating"
            app:layout_constraintTop_toTopOf="@+id/img_rating" />

        <TextView
            android:id="@+id/tv_language_detail_tvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/textColorTitleWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_language"
            app:layout_constraintStart_toEndOf="@+id/img_language"
            app:layout_constraintTop_toTopOf="@+id/img_language" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/synopsis_detail"
            android:textColor="@color/textColorTitle"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_detail_tvs" />

        <TextView
            android:id="@+id/tv_overview_tvs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/textColorTitleWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ProgressBar
            android:id="@+id/progressBar_detail_mv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/btn_fav_mov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#00ffffff"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite_border_white_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_bg_tvs"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btn_del_fav_mov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#00ffffff"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite_red_24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/img_bg_tvs"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>